@@ -4,20 +4,7 @@ Project bootstrap using [samatra-extras](https://github.com/springernature/samat
 
 To bootstrap a new samatra project run the following:
 ```
-./sbt new git@github.com:springernature/samatra.g8
-```
-
-If you don't have sbt then:
-```
-wget https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.13.13/sbt-launch.jar
-
-cat > sbt <<EOF 
-#!/bin/bash
-SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
-java \$SBT_OPTS -jar `dirname $0`/sbt-launch.jar "\$@"
-EOF
-
-chmod a+x sbt
+./sbt new git@github.com:westernsam/samatra.g8
 ```
 
 ## What you get out of the box
